update stack widget

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -1,6 +1,21 @@
 
+
 [/Script/CommonUI.CommonUISettings]
 CommonButtonAcceptKeyHandling=TriggerClick
 
 [/Script/EngineSettings.GeneralProjectSettings]
 ProjectID=518F5F2149CF61170D7EC9A902F6B063
+
+[/Script/CommonInput.CommonInputSettings]
+InputData=/Game/CommonUI/Input/BP_InputData.BP_InputData_C
+
+[CommonInputPlatformSettings_Windows CommonInputPlatformSettings]
+DefaultInputType=MouseAndKeyboard
+bSupportsMouseAndKeyboard=True
+bSupportsTouch=False
+bSupportsGamepad=True
+DefaultGamepadName=Windows
+bCanChangeGamepadType=True
++ControllerData=/Game/CommonUI/Input/BP_ControllerData_PC_Gamepad.BP_ControllerData_PC_Gamepad_C
++ControllerData=/Game/CommonUI/Input/BP_ControllerData_PC_Keybord.BP_ControllerData_PC_Keybord_C
+
