--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,8 +1,8 @@
 
 
 [/Script/EngineSettings.GameMapsSettings]
-GameDefaultMap=/Game/MainLevel.MainLevel
-EditorStartupMap=/Game/MainLevel.MainLevel
+GameDefaultMap=/Game/MainMenu/MainMenu.MainMenu
+EditorStartupMap=/Game/MainMenu/MainMenu.MainMenu
 
 [/Script/Engine.RendererSettings]
 r.AllowStaticLighting=False
@@ -76,6 +76,7 @@ FontDPI=72
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/CommonUILab")
 +ActiveGameNameRedirects=(OldGameName="/Script/TP_Blank",NewGameName="/Script/CommonUILab")
+GameViewportClientClassName=/Script/CommonUI.CommonGameViewportClient
 
 [/Script/AndroidFileServerEditor.AndroidFileServerRuntimeSettings]
 bEnablePlugin=True
